--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "npm install"
+  "installCommand": "rm -rf node_modules package-lock.json && npm install"
 }
